fix spacing reuslts h1

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -138,10 +138,12 @@ nav
   -webkit-text-fill-color: transparent
   text-transform: uppercase
   text-align: center
-  text-shadow: 0px 0px 10px #CCC
-  //filter: dropshadow(color=##CCC, offx=0, offy=0)
+  text-shadow: 0px 0px 5px #CCC
+  filter: dropshadow(color=#CCC, offx=0, offy=0)
   margin: 25px 0 0
   padding: 0
+  font-size: 68px
+  line-height: 1em
 
 			
 #search
